tests/errors/redeclaration.l26
{
    int x;
    int x;          // error: redeclaration in the same scope
    x = 1;
}
